HW_1_sql.ipynb change 7 and 10 tasks

--- a/sql_lesson_1/HW_1_sql.ipynb
+++ b/sql_lesson_1/HW_1_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "7                                   Seaweed and fish  "
       ]
      },
-     "execution_count": 217,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "24             Adenauerallee 900  "
       ]
      },
-     "execution_count": 219,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "2   France             11"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "0  Speedy Express  08.07.1996"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "3  Mozzarella di Giovanni   34.8"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +833,7 @@
        "13  Gorgonzola Telino    10423        14"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -988,70 +988,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
        "      <th>CategoryName</th>\n",
-       "      <th>sum(t2.Price)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Brazil</td>\n",
        "      <td>Beverages</td>\n",
-       "      <td>405.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Confections</td>\n",
-       "      <td>312.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Meat/Poultry</td>\n",
-       "      <td>286.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Produce</td>\n",
-       "      <td>227.85</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Condiments</td>\n",
-       "      <td>165.80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Dairy Products</td>\n",
-       "      <td>151.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Brazil</td>\n",
-       "      <td>Seafood</td>\n",
-       "      <td>114.10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Country    CategoryName  sum(t2.Price)\n",
-       "0  Brazil       Beverages         405.75\n",
-       "1  Brazil     Confections         312.28\n",
-       "2  Brazil    Meat/Poultry         286.39\n",
-       "3  Brazil         Produce         227.85\n",
-       "4  Brazil      Condiments         165.80\n",
-       "5  Brazil  Dairy Products         151.30\n",
-       "6  Brazil         Seafood         114.10"
+       "  CategoryName\n",
+       "0    Beverages"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,14 +1014,15 @@
     "tasks+=1\n",
     "pd.read_sql(\n",
     "    '''\n",
-    "    SELECT t5.Country, t1.CategoryName, sum(t2.Price)\n",
+    "    SELECT t1.CategoryName\n",
     "    FROM Categories t1 INNER JOIN Products t2 ON t1.CategoryID=t2.CategoryID\n",
     "    LEFT JOIN OrderDetails t3 ON t3.ProductID=t2.ProductID\n",
     "    INNER JOIN ORDERS t4 ON t4.OrderID=t3.OrderID\n",
     "    LEFT JOIN Customers t5 ON t4.CustomerID=t5.CustomerID\n",
     "    WHERE t5.Country=='Brazil'\n",
     "    GROUP BY t1.CategoryID\n",
-    "    ORDER BY sum(t2.Price) DESC\n",
+    "    ORDER BY (sum(t2.Price) * t3.Quantity) DESC\n",
+    "    LIMIT 1\n",
     "    ''',\n",
     "    con,\n",
     ")"
@@ -1246,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1270,24 +1225,24 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>sum(t2.Quantity)</th>\n",
+       "      <th>count_buttles</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>256</td>\n",
+       "      <td>6144</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   sum(t2.Quantity)\n",
-       "0               256"
+       "   count_buttles\n",
+       "0           6144"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1251,7 @@
     "tasks+=1\n",
     "pd.read_sql(\n",
     "    '''\n",
-    "    SELECT sum(t2.Quantity)\n",
+    "    SELECT sum(t2.Quantity) * CAST(substr(\"24 - 4 oz tins\", 1, 2) as integer) as count_buttles\n",
     "    FROM Products t1 LEFT JOIN OrderDetails t2 ON t1.ProductID=t2.ProductID\n",
     "    WHERE t1.ProductName='Boston Crab Meat'\n",
     "    ''',\n",
@@ -1343,7 +1298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1357,7 +1312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
